crates/ditto-checker/tests/golden/type-errors/duplicate_type_declaration.ditto
module Test exports (..);

type SomeType = A;


type SomeType = B;
